<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".producto">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="150dp"
                android:contentDescription="@string/descripcion"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
            android:id="@+id/producto"
            android:layout_width="wrap_content"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/Titulo_producto"
            android:textColor="#ffff"
            android:textSize="26sp" />

            <TextView
                android:id="@+id/Arracacha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"

                android:text="@string/Arracacha"
                android:textColor="@color/colorblanco"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <ImageView
                android:id="@+id/Imagen_Arracacha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/descripcion"
                app:srcCompat="@mipmap/ic_arracacha_foreground" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/Ingrediente_arracacha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:text="@string/ingredientes_arracacha"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Arroz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"

                android:text="@string/Arroz"
                android:textColor="@color/colorblanco"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <ImageView
                android:id="@+id/Imagen_Arroz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/descripcion"
                app:srcCompat="@mipmap/ic_arroz_foreground" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/Ingrediente_arroz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:text="@string/ingredientes_arroz"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Papa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"

                android:text="@string/papa"
                android:textColor="@color/colorblanco"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <ImageView
                android:id="@+id/Imagen_Papa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/descripcion"
                android:layout_marginTop="15dp"
                app:srcCompat="@mipmap/ic_arroz_foreground" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/Ingrediente_Papa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:text="@string/ingredientes_papa"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnPedido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/HacerPedido"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:layout_margin="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>